tools/deployment/overlays/test/environment_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: ibuildings
spec:
    template:
        spec:
            containers:
                -   name: www
                    env:
                        -   name: SERVER_NAME
                            value: "http://"
                -   name: app
                    env:
                        -   name: DATABASE_URL
                            valueFrom:
                                secretKeyRef:
                                    name: env-test
                                    key: db-dsn
                        -   name: APP_ENV
                            value: "prod"
                        -   name: APP_SECRET
                            valueFrom:
                                secretKeyRef:
                                    name: ????-env-test
                                    key: app-secret
                        -   name: TRUSTED_PROXIES
                            value: "REMOTE_ADDR"
