tools/deployment/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    namespace: ibuildings
    annotations:
        kubernetes.io/ingress.class: "nginx"
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    tls:
        -   hosts:
                - ????.ib-services.nl
            secretName: test-????-tls
    rules:
        -   host: ????.ib-services.nl
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: svc
                                port:
                                    number: 80
